tests/js_error/source_locations/expression/call/call_maybe_eval.exp
Error: 
  ┌ tests/js_error/source_locations/expression/call/call_maybe_eval.js:2:9
  |
2 |   throw new Error();
  |         ^
Stack trace:
  at eval (tests/js_error/source_locations/expression/call/call_maybe_eval.js:2:9)
  at <global> (tests/js_error/source_locations/expression/call/call_maybe_eval.js:5:1)